# storm-engine

./: .clang-format  CMakeLists.txt  conanfile.py
.github/workflows/: ci_linux.yml  ci_windows.yml  release_beta.yml
cmake/: conan.cmake
src/apps/engine/: CMakeLists.txt
src/apps/engine/rsrc/: resource.rc
src/apps/engine/src/: main.cpp
src/libs/animals/src/: t_butterflies.cpp  t_fish_schools.cpp  t_seagulls.cpp
src/libs/animation/src/: animation_service_imp.cpp
src/libs/ball_splash/src/: ball_splash.cpp
src/libs/battle_interface/src/: battle_command.cpp  bi_utils.cpp  log_and_action.cpp
src/libs/blade/src/: blade.cpp  blade.h
src/libs/config/: CMakeLists.txt
src/libs/config/testsuite/: attribute_match.cpp  config.cpp
src/libs/core/: CMakeLists.txt
src/libs/core/include/: attributes.h  core.h  core_private.h  entity.h  file_service.h  ifs.h  v_file_service.h  vma.hpp
src/libs/core/src/: attributes.cpp  compiler.cpp  core_impl.cpp  core_impl.h  entity.cpp  entity_manager.cpp  entity_manager.h  file_service.cpp  ifs.cpp  internal_functions.cpp  string_codec.h
src/libs/diagnostics/src/: lifecycle_diagnostics_service.cpp  logging.cpp  seh_extractor.cpp
src/libs/dialog/src/: dialog.cpp  legacy_dialog.cpp  legacy_dialog.hpp
src/libs/editor/: CMakeLists.txt
src/libs/editor/include/storm/editor/: engine_editor.hpp  storm_imgui.hpp
src/libs/editor/src/storm/editor/: engine_editor.cpp
src/libs/location/: CMakeLists.txt
src/libs/renderer/: CMakeLists.txt
src/techniques/worldmap/: worldmap.fx
tools/map-label-extract/: map_label_extract.py
(+105 files in other folders)
